--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap');
+
+/* btn login container */
+.login-container{
+    width: 100%;
+    display: flex;
+    justify-content: right;
+}
+
+.login-container a{
+    text-decoration: none;
+
+    font-family: 'Mulish', sans-serif;
+}
+
+.login-container button{
+border: none;
+
+background-color: white;
+margin: 50px;
+
+cursor: pointer;
+}
+/* end off btn login container */
+
+/* ph logo container */
+
+/* end of logo container */
+
+/* .sb-container */
+.sb-container{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+}
+
+.sb-container input{
+    width: 565px;
+    height: 30px;
+
+    border-radius: 20px;
+    border-width: 0.1px;
+
+    padding-left: 10px;
+
+    font-size: 20px;
+
+    font-family: 'Mulish', sans-serif;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.192);
+}
+/* end of sb-container */
+
+/* sb-logo-container  */
+.sb-logo-container{
+    width: 100%;
+    height: 230px;
+
+    display: flex;
+    justify-content: center;
+
+}
+
+.sb-logo-container p{
+    font-size: 100px;
+    font-family: 'Times New Roman', Times, serif;
+}
+/* end of sb-logo-container  */
+
+/* footer container */
+.footer-container{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+
+    background-color: rgb(211, 211, 211);
+    margin-top: 455px;
+
+    height: 30px;
+    
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+.footer-container p{
+    font-family: 'Mulish', sans-serif;
+
+    font-size: 20px;
+    margin-top: 1px;
+}
+
+.footer-container a{
+padding-left: 20px;
+
+
+font-family: 'Mulish', sans-serif;
+
+font-size: 20px;
+margin-top: 1px;
+
+text-decoration: none;
+}
+
+/* end of footer container */
