--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap');
-
 /* index.html */
 
 @media screen and (min-width: 390px){
@@ -13,6 +12,7 @@
 
 .login-container a{
     text-decoration: none;
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
 }
 
@@ -43,7 +43,9 @@ margin-bottom: 150px;
     border-radius: 20px;
     border-width: .5px;
     border-color: purple;
-
+    
+    font-weight: bold;
+    font-family: 'Mulish', sans-serif;
     
     padding-left: 10px;
 
@@ -67,6 +69,9 @@ margin-bottom: 150px;
     border-radius: 5px;
     background-color: purple;
     color: white;
+
+    font-weight: bold;
+    font-family: 'Mulish', sans-serif;
 
     cursor: pointer;
 
@@ -113,21 +118,23 @@ margin-bottom: 150px;
 }
 
 .footer-container-1 p{
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
-
     font-size: 20px;
+
     margin-top: 1px;
 }
 
 .footer-container-1 a{
 padding-left: 20px;
 
-font-family: 'Mulish', sans-serif;
+    font-weight: bold;
+    font-family: 'Mulish', sans-serif;
 
-font-size: 20px;
-margin-top: 1px;
+    font-size: 20px;
+    margin-top: 1px;
 
-text-decoration: none;
+    text-decoration: none;
 }
 }
 @media screen and (min-width: 768px){
@@ -141,7 +148,7 @@ text-decoration: none;
     
     .login-container a{
         text-decoration: none;
-    
+        font-weight: bold;
         font-family: 'Mulish', sans-serif;
     }
     
@@ -172,6 +179,9 @@ text-decoration: none;
     
         padding-left: 10px;
     
+        font-weight: bold;
+        font-family: 'Mulish', sans-serif;
+
         font-size: 20px;
     
         font-family: 'Mulish', sans-serif;
@@ -210,15 +220,17 @@ text-decoration: none;
     }
     
     .footer-container-1 p{
+        font-weight: bold;
         font-family: 'Mulish', sans-serif;
-    
         font-size: 20px;
+
         margin-top: 1px;
     }
     
     .footer-container-1 a{
     padding-left: 20px;
     
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
     
     font-size: 20px;
@@ -240,6 +252,7 @@ text-decoration: none;
 
 .login-container a{
     text-decoration: none;
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
 }
 
@@ -342,6 +355,7 @@ cursor: pointer;
 .footer-container-1 a{
 padding-left: 20px;
 
+font-weight: bold;
 font-family: 'Mulish', sans-serif;
 
 font-size: 20px;
@@ -485,7 +499,9 @@ text-decoration: none;
 
     width: 250px;
     height: 30px;
+
     font-size: large;
+    font-family: 'Mulish', sans-serif;
 }
 
 .login-form button:hover{
@@ -564,6 +580,7 @@ border: solid;
 border-width: .5px;
 border-color: purple;
 border-radius: 5px;
+
 background-color: purple;
 color: white;
 
@@ -573,6 +590,7 @@ width: 280px;
 height: 30px;
 
 font-size: large;
+font-family: 'Mulish', sans-serif;
 }
 
 .createacc-form button:hover{
@@ -599,15 +617,17 @@ font-size: large;
 }
 
 .footer-container p{
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
-
     font-size: 20px;
+
     margin-top: 1px;
 }
 
 .footer-container a{
 padding-left: 20px;
 
+font-weight: bold;
 font-family: 'Mulish', sans-serif;
 
 font-size: 20px;
@@ -867,15 +887,17 @@ font-family: 'Mulish', sans-serif;
 }
 
 .footer-container p{
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
-
     font-size: 20px;
+
     margin-top: 1px;
 }
 
 .footer-container a{
 padding-left: 20px;
 
+font-weight: bold;
 font-family: 'Mulish', sans-serif;
 
 font-size: 20px;
@@ -884,8 +906,7 @@ margin-top: 1px;
 text-decoration: none;
 }
 }
-@media screen and not (max-width: 1024px){
-    
+@media screen and not (max-width: 1024px){ 
 .go-back-btn{
     width: 100%;
     display: flex;
@@ -1103,6 +1124,7 @@ font-size: x-large;
 }
 
 .footer-container p{
+    font-weight: bold;
     font-family: 'Mulish', sans-serif;
 
     font-size: 20px;
@@ -1112,7 +1134,8 @@ font-size: x-large;
 .footer-container a{
 padding-left: 20px;
 
-font-family: 'Mulish', sans-serif;
+        font-weight: bold;
+        font-family: 'Mulish', sans-serif;
 
 font-size: 20px;
 margin-top: 1px;
@@ -1123,12 +1146,347 @@ text-decoration: none;
 
 /* About html */
 @media screen and (min-width: 390px){
+    .go-back-btn{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
     
+    #back-btn{
+        width: 100%;
+    }
+    
+    .go-back-btn a{
+        color: black;
+    }
+    
+    .go-back-btn button{
+        font-size: 40px;
+        border: none;
+        background-color: white;
+        padding-left: 30px;
+    }
+    
+    /* h-banner container */
+    .h-container{
+        width: 100%;
+        display: flex;
+        
+        justify-content: center;
+    }
+    
+    /* sb-logo-container2  */
+    .sb-logo-container{
+        width: 100%;
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #sb-logo-ph2{
+        color: #d400ff;
+        font-size: 35px;
+        height: 1px;
+        margin-top: 5px;
+        margin-left: 215px;
+        margin-bottom: 10px;
+    }
+    
+    #sb-logo-cl2{
+        margin-top: auto;
+        font-size: 55px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    .abt-container{
+        width: 100%;
+        display: flex;
+
+        justify-content: center;
+    }
+
+    .abt-info{
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+    }
+
+    .abt-info p{
+        margin-top: 50px;
+        margin-left: 50px;
+        margin-right: 50px;
+
+        font-family: 'Mulish', sans-serif;
+    }
+
+    /* footer container2 */
+    .footer-container-2{
+        margin-top: 90px;
+
+        width: 100%;
+        height: 30px;
+
+        display: flex;
+        justify-content: center;
+    
+        background-color: rgb(211, 211, 211);
+        
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 5px;
+    }
+    
+    .footer-container-2 p{
+        font-weight: bold;
+        font-family: 'Mulish', sans-serif;
+    
+        font-size: 20px;
+        margin-top: 1px;
+    }
+    
+    .footer-container-2 a{
+    padding-left: 20px;
+    
+            font-weight: bold;
+            font-family: 'Mulish', sans-serif;
+    
+    font-size: 20px;
+    margin-top: 1px;
+    
+    text-decoration: none;
 }
+}
+@media screen and (min-width: 768px){
+    .go-back-btn{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+    
+    #back-btn{
+        width: 100%;
+    }
+    
+    .go-back-btn a{
+        color: black;
+    }
+    
+    .go-back-btn button{
+        font-size: 40px;
+        border: none;
+        background-color: white;
+        padding-left: 30px;
+    }
+    
+    /* h-banner container */
+    .h-container{
+        width: 100%;
+        display: flex;
+        
+        justify-content: center;
+    }
+    
+    /* sb-logo-container2  */
+    .sb-logo-container{
+        width: 100%;
+    
+        display: flex;
+        justify-content: center;
+    }
+    
+    #sb-logo-ph2{
+        color: #d400ff;
+        font-size: 35px;
+        height: 1px;
+        margin-top: 5px;
+        margin-left: 215px;
+        margin-bottom: 10px;
+    }
+    
+    #sb-logo-cl2{
+        margin-top: auto;
+        font-size: 55px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    .abt-container{
+        width: 100%;
+        display: flex;
+
+        justify-content: center;
+    }
+
+    .abt-info{
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+    }
+
+    .abt-info p{
+        margin-top: 50px;
+        margin-left: 50px;
+        margin-right: 50px;
+
+        font-size: 1.2rem;
+    }
+
+    /* footer container2 */
+.footer-container-2{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+
+    background-color: rgb(211, 211, 211);
+    
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+
+    /* margin-top: 810px; */
+}
+
+.footer-container-2 p{
+    font-family: 'Mulish', sans-serif;
+
+    font-size: 20px;
+    margin-top: 1px;
+}
+
+.footer-container-2 a{
+padding-left: 20px;
+
+font-family: 'Mulish', sans-serif;
+
+font-size: 20px;
+margin-top: 1px;
+
+text-decoration: none;
+}
+}
+@media screen and not (max-width: 1024px){
+    .go-back-btn{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+    
+    #back-btn{
+        width: 100%;
+    }
+    
+    .go-back-btn a{
+        color: black;
+    }
+    
+    .go-back-btn button{
+        font-size: 40px;
+        border: none;
+        background-color: white;
+        padding-left: 30px;
+    }
+    
+    /* h-banner container */
+    .h-container{
+        width: 100%;
+        display: flex;
+        
+        align-items: center;
+    }
+    
+    /* sb-logo-container2  */
+    .sb-logo-container{
+        width: 100%;
+    
+        display: flex;
+        justify-content: center;
+    }
+    
+    #sb-logo-ph2{
+        color: #d400ff;
+        font-size: 35px;
+        height: 1px;
+        margin-top: 5px;
+        margin-left: 215px;
+        margin-bottom: 10px;
+    }
+    
+    #sb-logo-cl2{
+        font-size: 55px;
+        font-family: 'Times New Roman', Times, serif;
+    }
+
+    .abt-container{
+        width: 100%;
+        display: flex;
+
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .abt-info{
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+    }
+
+    .abt-info p{
+        margin-left: 50px;
+        margin-right: 50px;
+
+        font-size: 1.2rem;
+    }
+
+    /* footer container2 */
+    .footer-container-2{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+    
+        background-color: rgb(211, 211, 211);
+        
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 5px;
+    
+        /* margin-top: 810px; */
+    }
+    
+    .footer-container-2 p{
+        font-weight: bold;
+        font-family: 'Mulish', sans-serif;
+    
+        font-size: 20px;
+        margin-top: 1px;
+    }
+    
+    .footer-container-2 a{
+    padding-left: 20px;
+    
+            font-weight: bold;
+            font-family: 'Mulish', sans-serif;
+    
+    font-size: 20px;
+    margin-top: 1px;
+    
+    text-decoration: none;
+    }
+}
+
+/* main html */
 @media screen and (min-width: 390px){
     
 }
-@media screen and not (max-width: 1024px){
+
+@media screen and (min-width: 768px){
     
 }
-/* <---------------- end of login.html -----------------> */
+
+@media screen and (max-width: 1024px){
+    
+}
